<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    tools:context=".poner_descripcion">

    <ImageButton
        android:id="@+id/retroceso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/fondo"
        android:contentDescription="@string/devolver"
        android:src="@drawable/cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/etiqueta"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imagen"
        android:fontFamily="@font/logo_fuente"
        android:text="@string/Imagen"
        android:textColor="@color/fuente_logo"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/retroceso"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/eliminar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="@color/transparente"
        android:contentDescription="@string/eliminar"
        android:src="@drawable/eliminar"
        android:textColor="@color/fondo"
        app:layout_constraintStart_toEndOf="@id/etiqueta"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:background="@drawable/campo_digitar"
        android:layout_marginEnd="25dp"
        android:textColor="@color/fondo"
        android:layout_marginTop="110dp"
        android:textColorHint="@color/fuente_logo"
        android:fontFamily="@font/inputs_fuente">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titulo_imagen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            android:maxLength="20"
            android:breakStrategy="high_quality"
            android:background="@drawable/campo_digitar"
            android:fontFamily="@font/inputs_fuente"
            android:hint="@string/titulo_imagen"
            android:gravity="center"
            android:textColor="@color/fuente_logo"
            android:textColorHint="@color/fuente_logo" />
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titulo_imagen"
            android:layout_marginStart="25dp"
            android:background="@drawable/campo_digitar"
            android:layout_marginEnd="25dp"
            android:textColor="@color/fondo"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/fuente_logo"
            android:fontFamily="@font/inputs_fuente">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descripcion1"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:textSize="18sp"
                android:background="@drawable/campo_digitar"
                android:fontFamily="@font/inputs_fuente"
                android:hint="@string/descripcion"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/fuente_logo"
                android:textColorHint="@color/fuente_logo" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cambiarImagenButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/cambiar_imagen"
            android:background="@drawable/boton_redondeado"
            android:textColor="@color/fondo"
            android:visibility="gone"
            android:fontFamily="@font/inputs_fuente"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />
        <Button
            android:id="@+id/subir_imagen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:backgroundTint="@null"
            android:text="@string/subir"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/inputs_fuente"
            android:textSize="18sp"
            android:textColor="@color/fondo"
            android:background = "@drawable/boton_redondeado"
            app:layout_constraintTop_toBottomOf="@id/cambiarImagenButton" android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>